--- a/template.yaml
+++ b/template.yaml
@@ -9,16 +9,19 @@ Description: >
 Globals:
   Function:
     Timeout: 3
+    Runtime: python3.*
+    CodeUri: src/
+    Architectures:
+      - x86_64
+
+plugins:
+  - serverless-python-requirements
 
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: hello_world/
       Handler: app.lambda_handler
-      Runtime: python3.9
-      Architectures:
-        - x86_64
       Events:
         HelloWorld:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
