--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: test
-    uses: ./.github/workflow/build.yml
+    uses: ./.github/workflows/build.yml
     with:
       stage: dev
     steps:
