--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,36 +6,22 @@ on:
       - main
 
 jobs:
-  python-env:
-    name: python-env
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.x']
-        exclude:
-          - os: macos-latest
-            python-version: '3.8'
-          - os: windows-latest
-            python-version: '3.6'
+  test:
+    name: test
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Display Python version
-        run: python --version
+          python-version: '3.x'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
-  test:
-    name: test
-    needs: python-env
-    steps:
       - name: Test with pytest
-      - run: pip install pytest
-      - run: pytest unit
+        run: |
+          pip install pytest
+          pytest unit
   deploy:
     name: deploy
     needs: test
