--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,18 +6,34 @@ on:
       - main
 
 jobs:
-  test:
-    name: test
+  python-env:
+    name: python-env
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.x']
+        exclude:
+          - os: macos-latest
+            python-version: '3.8'
+          - os: windows-latest
+            python-version: '3.6'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.x'
+          python-version: ${{ matrix.python-version }}
+      - name: Display Python version
+        run: python --version
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
+  test:
+    name: test
+    needs: python-env
+    steps:
+      - uses: actions/checkout@v3
       - name: Test with pytest
         run: |
           pip install pytest
