--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
   test:
     name: test
     needs: python-env
+    runs-on: ubuntu-lastest
     steps:
       - uses: actions/checkout@v3
       - name: Test with pytest
