--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,9 @@ jobs:
       - name: Serverless deploy
         uses: serverless/github-action@v3
         with:
-          args: deploy --stage dev ./template.yaml
+          args: deploy --stage dev
+        working-directory: ./aws-training
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SLS_DEBUG: 1
