--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,8 +51,8 @@ jobs:
       - name: Serverless deploy
         uses: serverless/github-action@v3
         with:
-          args: deploy --stage dev
-        working-directory: ./aws-training
+          args: -c "cd ./aws-training && serverless deploy"
+          entrypoint: /bin/sh
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
