--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Serverless deploy
         uses: serverless/github-action@v3
         with:
-          args: -c "cd ./aws-training && serverless deploy"
+          args: -c "cd ./ && serverless deploy"
           entrypoint: /bin/sh
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
