--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,8 +51,7 @@ jobs:
       - name: Serverless deploy
         uses: serverless/github-action@v3
         with:
-          args: -c "cd ./ && serverless deploy"
-          entrypoint: /bin/sh
+          args: deploy --stage dev /home/runner/work/aws-training/aws-training/template.yml
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
