--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,11 +47,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - name: Serverless deploy
-        uses: serverless/github-action@v3
-        with:
-          args: deploy --stage dev /home/runner/work/aws-training/aws-training/template.yml
+      - run: npm install
+      - run: node ./node_modules/serverless/bin/serverless.js plugin install -n serverless-bundle
+      - run: node ./node_modules/serverless/bin/serverless.js config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - run: node ./node_modules/serverless/bin/serverless.js deploy --verbose
+        working-directory: /home/runner/work/aws-training/aws-training/template.yml
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
