--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
       - run: node ./node_modules/serverless/bin/serverless.js plugin install -n serverless-bundle
       - run: node ./node_modules/serverless/bin/serverless.js config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - run: node ./node_modules/serverless/bin/serverless.js deploy --verbose
-        working-directory: /home/runner/work/aws-training/aws-training/template.yml
+        working-directory: /home/runner/work/aws-training/aws-training/
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
