--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
       - run: npm install
       - run: node ./node_modules/serverless/bin/serverless.js plugin install -n serverless-bundle
       - run: node ./node_modules/serverless/bin/serverless.js config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - run: node ./node_modules/serverless/bin/serverless.js deploy --verbose
+      - run: node ./node_modules/serverless/bin/serverless.js deploy --verbose --stage dev
         working-directory: /home/runner/work/aws-training/aws-training/
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
