--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,10 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-18.04
-    env:
-      AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      SLS_DEBUG: 1
+    defaults:
+      run:
+        shell: bash
+        working-directory: /home/runner/work/aws-training/aws-training/
     needs: test
     strategy:
       matrix:
@@ -52,7 +52,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
-      - run: node /home/runner/work/aws-training/aws-training/node_modules/serverless/bin/serverless.js plugin install -n serverless-bundle
-      - run: node /home/runner/work/aws-training/aws-training/node_modules/serverless/bin/serverless.js config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - run: node /home/runner/work/aws-training/aws-training/node_modules/serverless/bin/serverless.js deploy --verbose --stage=dev
-        
+      - run: node ./node_modules/serverless/bin/serverless.js plugin install -n serverless-bundle
+      - run: node ./node_modules/serverless/bin/serverless.js config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - run: node ./node_modules/serverless/bin/serverless.js deploy --verbose --stage=dev
+        env:
+          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SLS_DEBUG: 1
