--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,26 +34,23 @@ jobs:
         run: |
           pip install pytest
           pytest ./unit
-  deploy:
-    name: deploy
-    runs-on: ubuntu-18.04
+  build-deploy:
+    name: build-deploy
+    runs-on: ubuntu-latest
     needs: test
-    strategy:
-      matrix:
-        node-version: [14.x]
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/setup-python@v2
+      - uses: aws-actions/setup-sam@v1
+      - uses: aws-actions/configure-aws-credentials@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - name: serverless deploy
-        uses: serverless/github-action@v3
-        with:
-          args: -c "cd /home/runner/work/aws-training/aws-training/ && serverless deploy --stage=dev --verbose"
-          entrypoint: /bin/sh
-        env:
-          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SLS_DEBUG: 1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: sa-east-1
+      # sam build 
+      - run: sam build --use-container
+
+# Run Unit tests- Specify unit tests here 
+
+# sam deploy
+      - run: sam deploy --region sa-east-1 --stage dev
