--- a/template.yaml
+++ b/template.yaml
@@ -9,7 +9,7 @@ Description: >
 Globals:
   Function:
     Timeout: 3
-    Runtime: python3.*
+    Runtime: python3.9
     CodeUri: src/
     Architectures:
       - x86_64
