--- a/template.yaml
+++ b/template.yaml
@@ -5,6 +5,16 @@ Description: >
 
   Sample SAM Template for sam-app
 
+Parameters:
+  Environment:
+    Type: String
+    Description: Which environment do you want to deploy to? (local,dev,stage, or prod)
+    AllowedValues:
+    - qa
+    - dev
+    - prod
+    Default: dev
+
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
@@ -17,17 +27,25 @@ Globals:
 plugins:
   - serverless-python-requirements
 
+
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       Handler: app.lambda_handler
+      FunctionName: !Sub "${Environment}_helloWorldGet"
       Events:
         HelloWorld:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /hello
             Method: get
+            RestApiId: !Ref API
+
+  API:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: !Sub app-${Environment}
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
