--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,4 +53,4 @@ jobs:
 # Run Unit tests- Specify unit tests here 
 
 # sam deploy
-      - run: sam deploy --region sa-east-1 --stack-name app --parameter-overrides Environment="dev"
+      - run: sam deploy --region sa-east-1 --stack-name app --no-confirm-changeset --no-fail-on-empty-changeset --s3-bucket "app-bucket" --capabilities CAPABILITY_IAM --parameter-overrides Environment="dev"
