--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,19 +38,20 @@ jobs:
     name: build-deploy
     runs-on: ubuntu-latest
     needs: test
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: aws-actions/setup-sam@v1
-      - uses: aws-actions/configure-aws-credentials@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: sa-east-1
-      # sam build 
-      - run: sam build --use-container
-
-# Run Unit tests- Specify unit tests here 
-
-# sam deploy
-      - run: sam deploy --region sa-east-1 --stack-name app --no-confirm-changeset --no-fail-on-empty-changeset --s3-bucket "app-dev" --capabilities CAPABILITY_IAM --parameter-overrides Environment="dev"
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm install
+      - name: Serverless Deploy
+        run: npx serverless deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SLS-STAGE: dev
