--- a/serverless.yaml
+++ b/serverless.yaml
@@ -1,22 +1,8 @@
 service: app
 
-frameworkVersion: '3'
+frameworkVersion: '2'
 
-AWSTemplateFormatVersion: '2010-09-09'
-Transform: AWS::Serverless-2016-10-31
-Description: >
-  sam-app
 
-  Test Serverless app
-
-# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
-Globals:
-  Function:
-    Timeout: 3
-    Runtime: python3.9
-    CodeUri: src/
-    Architectures:
-      - x86_64
 
 plugins:
   - serverless-python-requirements
@@ -26,37 +12,22 @@ provider:
   runtime: python3.9
   lambdaHashingVersion: 20201221
   region: ${file(./variables.json):AWSREGION}
-  stage: dev
+  stage: ${file(./variables.json):AWSSTAGE}
 
-Resources:
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-    Properties:
-      Handler: app.lambda_handler
-      FunctionName: !Sub "${Environment}_helloWorldGet"
-      Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-          Properties:
-            Path: /hello
-            Method: get
-            RestApiId: !Ref API
+  memorySize: 1024
+  timeout: 30
 
-  API:
-    Type: AWS::Serverless::Api
-    Properties:
-      StageName: !Sub app-${Environment}
+  iam:
+    role:
+      managedPolicies:
+      - arn:aws:iam:aws:policy/service-role/AWSLambdaBasicExecutionRole
+      - arn:aws:iam:aws:policy/AmazonS3FullAccess
 
-Outputs:
-  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: "Hello World Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+functions:
+  - HelloWorldFunction:
+      handler: src/app.lambda_handler
+      events:
+        - http:
+            path: helloworld
+            cors: true
+            method: get
