--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,8 @@ jobs:
         run: |
           pip install pytest
           pytest ./unit
-  build-deploy:
-    name: build-deploy
+  deploy:
+    name: deploy
     runs-on: ubuntu-latest
     needs: test
     strategy:
@@ -50,7 +50,7 @@ jobs:
       - run: npm ci
       - run: npm install
       - name: Serverless Deploy
-        run: npx serverless deploy --no-confirm
+        run: npx serverless deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
