--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
       - run: npm ci
       - run: npm install
       - name: Serverless Deploy
